fix alignment of social sharing icons

--- a/static/sass/_pattern_footer.scss
+++ b/static/sass/_pattern_footer.scss
@@ -257,6 +257,24 @@
       color: currentColor;
     }
 
+    // social icons in footer
+    .p-inline-list-icons {
+      @media (max-width: $breakpoint-medium) {
+        margin-left: 0;
+        margin-top: 1rem;
+        padding-left: 0;
+      }
+
+      @media only screen and (min-width: $breakpoint-medium) {
+        float: right;
+        padding-left: 0;
+      }
+
+      @media only screen and (min-width: $breakpoint-large) {
+        margin-top: $sp-x-small;
+      }
+    }
+
     .p-inline-list__item {
       display: block;
 
@@ -269,28 +287,6 @@
           display: none;
         }
       }
-    }
-  }
-
-  // social icons in footer
-  .p-inline-list-icons {
-    @media (max-width: $breakpoint-medium) {
-      margin-left: 0;
-      margin-top: 1rem;
-      padding-left: 0;
-
-      .p-inline-list__item {
-        display: inline-block;
-      }
-    }
-
-    @media only screen and (min-width: $breakpoint-medium) {
-      float: right;
-      padding-left: 0;
-    }
-
-    @media only screen and (min-width: $breakpoint-large) {
-      margin-top: $sp-x-small;
     }
   }
 
